# 2DIsing_simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
benchmarks/: README.md
go/: ising2d.go
js/: 2d_ising.js  README.md  index.html
scripts/: show_bench.py
src/: 2d_ising.c  2d_ising.cpp  2d_ising.cu  CMakeLists.txt  Image.cpp  Image.hpp  Ising2D.cu  Ising2D.hpp  Makefile  a.out  cmake_install.cmake  mykernel.cu  mykernel.hpp  optimized_2d_isign.cu  optimized_2d_ising.cu
